# debian-lsp

./: Cargo.toml  README.md  ale-debian-lsp.vim
coc-debian/: package.json
coc-debian/src/: index.ts
emacs-lspconfig/: README.md
helix-lspconfig/: README.md
src/: main.rs  workspace.rs
src/patches_series/: completion.rs  detection.rs  mod.rs
vscode-debian/: package.json
vscode-debian/src/: extension.ts
