[package]
name = "debian-lsp"
version = "0.1.7"
edition = "2021"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
description = "Language Server Protocol implementation for Debian control files with field completion, diagnostics, and quickfixes"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jelmer/debian-lsp"
keywords = ["lsp", "debian", "control", "language-server"]
categories = ["development-tools", "text-editors"]

[features]
default = ["launchpad"]
launchpad = ["dep:launchpadlib"]

[dependencies]
# debian-analyzer = "0.159.0"
async-trait = "0.1"
chrono = "0.4"
debian-changelog = "0.2.18"
debian-control = { version = "0.3.7" }
debian-copyright = { version = "0.1.47", features = ["lossless"] }
debian-watch = { version = "0.4.6", features = ["linebased", "deb822"] }
distro-info = "0.4"
rowan = "0.16.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
makefile-lossless = "0.3.31"
deb822-fast = "0.2"
deb822-lossless = { version = "0.5.12" }
yaml-edit = { version = "0.2.0" }
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salsa = ">=0.23, <0.27"
text-size = "1.1"
patchkit = { git = "https://github.com/lucasly-ba/patchkit", branch = "fix-series-parsing" }
launchpadlib = { version = "0.5.7", optional = true, default-features = false, features = ["async", "api-v1_0", "bugs", "packages"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = "0.5"
tower-service = "0.3"

[[bin]]
name = "debian-lsp"
test = true
